fix(Table): fix words being split when wordWrap

--- a/src/Table/styles/index.less
+++ b/src/Table/styles/index.less
@@ -300,7 +300,7 @@
 
   &-word-wrap &-cell-content {
     white-space: normal;
-    word-break: break-all;
+    word-break: break-word;
   }
 
   &-bordered {
